--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,18 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-menu [content]="content" type="overlay">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Navigate</ion-title>
+    </ion-toolbar>
+  </ion-header>
+
+  <ion-content>
+    <ion-list>
+      <button menuClose ion-item (click)="gotoMain()">Home</button>
+      <button menuClose ion-item (click)="gotoClaim()">Claim</button>
+      <ion-item-divider></ion-item-divider>
+      <button menuClose ion-item detail-none (click)="logout()">Log Out</button>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
+<ion-nav #content [root]="rootPage" [swipeBackEnabled]="false"></ion-nav>
