--- a/src/app/app.html
+++ b/src/app/app.html
@@ -7,7 +7,7 @@
 
   <ion-content>
     <ion-list>
-      <button menuClose ion-item (click)="gotoMain()">Home</button>
+      <button menuClose ion-item (click)="gotoContract()">Contract</button>
       <button menuClose ion-item (click)="gotoClaim()">Claim</button>
       <ion-item-divider></ion-item-divider>
       <button menuClose ion-item detail-none (click)="logout()">Log Out</button>
