--- a/src/app/app.html
+++ b/src/app/app.html
@@ -7,8 +7,8 @@
 
   <ion-content>
     <ion-list>
-      <button menuClose ion-item (click)="gotoContract()">Contract</button>
-      <button menuClose ion-item (click)="gotoClaim()">Claim</button>
+      <button menuClose ion-item (click)="gotoContract()">Contracts</button>
+      <button menuClose ion-item (click)="gotoClaim()">Claims</button>
       <ion-item-divider></ion-item-divider>
       <button menuClose ion-item detail-none (click)="logout()">Log Out</button>
     </ion-list>
